[gd_scene load_steps=7 format=3 uid="uid://b7gi5x517uh6e"]

[ext_resource type="Script" path="res://Scenes/MainMenu/main_menu.gd" id="1_1gwih"]
[ext_resource type="Texture2D" uid="uid://iwssjev2cvmn" path="res://Scenes/MainMenu/circle.png" id="1_gs4bx"]
[ext_resource type="Texture2D" uid="uid://64a16mvf36lw" path="res://Scenes/MainMenu/Screenshot 2024-10-08 221526.png" id="2_by4en"]

[sub_resource type="Animation" id="Animation_6u03n"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_6jivs"]
resource_name = "Twist"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.523599, -0.523599, 0.523599]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_c6x2s"]
_data = {
"RESET": SubResource("Animation_6u03n"),
"Twist": SubResource("Animation_6jivs")
}

[node name="Main Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1gwih")

[node name="Title" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TextureRect" type="TextureRect" parent="Title"]
layout_mode = 0
offset_left = 171.0
offset_top = 125.0
offset_right = 1154.0
offset_bottom = 637.0
scale = Vector2(0.4282, 0.395487)
texture = ExtResource("1_gs4bx")

[node name="Label" type="Label" parent="Title"]
layout_mode = 0
offset_left = 210.0
offset_top = 148.0
offset_right = 558.0
offset_bottom = 231.0
theme_override_font_sizes/font_size = 60
text = "Song Typing"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="Title"]
layout_mode = 0
offset_left = 213.0
offset_top = 220.0
offset_right = 561.0
offset_bottom = 303.0
theme_override_font_sizes/font_size = 40
text = "ソングタイプ"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Buttons" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="OptionsButton" type="Button" parent="Buttons"]
layout_mode = 0
offset_left = 171.0
offset_top = 544.0
offset_right = 274.0
offset_bottom = 576.0
text = "Options
"

[node name="PlayButton" type="Button" parent="Buttons"]
layout_mode = 0
offset_left = 514.0
offset_top = 453.0
offset_right = 617.0
offset_bottom = 485.0
text = "Play
"

[node name="QuitButton" type="Button" parent="Buttons"]
layout_mode = 0
offset_left = 891.0
offset_top = 550.0
offset_right = 994.0
offset_bottom = 582.0
text = "Quit
"

[node name="LegalNoticesButton" type="Button" parent="Buttons"]
layout_mode = 0
offset_left = 514.0
offset_top = 550.0
offset_right = 625.0
offset_bottom = 582.0
text = "Legal Notices"

[node name="Effects" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TextureRect" type="TextureRect" parent="Effects"]
layout_mode = 0
offset_left = 792.0
offset_top = 159.0
offset_right = 951.0
offset_bottom = 334.0
pivot_offset = Vector2(80, 80)
texture = ExtResource("2_by4en")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Effects"]
libraries = {
"": SubResource("AnimationLibrary_c6x2s")
}
autoplay = "Twist"

[connection signal="pressed" from="Buttons/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="Buttons/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="Buttons/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="Buttons/LegalNoticesButton" to="." method="_on_legal_notices_button_pressed"]
